# langton

./: Cargo.toml  README.md  pyproject.toml  rustfmt.toml
apps/termites/: Cargo.toml
apps/termites/src/: main.rs
canvas copy/: Cargo.toml
canvas copy/src/: config.rs  messages.rs  resources.rs  types.rs
crates/arc/: Cargo.toml
crates/arc/src/: lib.rs
crates/camera/: Cargo.toml
crates/camera/src/: conditions.rs  lib.rs  settings.rs  systems.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: components.rs  config.rs  lib.rs  resources.rs  systems.rs  types.rs
crates/fps/: Cargo.toml
crates/fps/src/: lib.rs  messages.rs  settings.rs  systems.rs
crates/langton/: Cargo.toml
crates/langton/src/: lib.rs
crates/random/: Cargo.toml
crates/random/src/: lib.rs  resources.rs
langton/: __init__.py  bytecode.py  operation.py  transpiler.py
scripts/: generate_bytecode.py  overview copy.py
