[workspace]
members = ["crates/*", "apps/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.0"
authors = ["Freddy Wordingham"]

[workspace.dependencies]
bevy = { version = "0.17", features = ["bevy_dev_tools", "dynamic_linking"] }
bevy_egui = "0.38"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
