[package]
name = "arc"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
arc_camera = { path = "../camera" }
arc_fps = { path = "../fps" }
arc_langton = { path = "../langton" }
arc_random = { path = "../random" }
bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy-canvas-2d = { workspace = true }
